--- a/release/index.html
+++ b/release/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-	<script type="text/javascript" src="static/js/thirdparty/jquery-3.1.1.min.js"></script>
-	<script type="text/javascript" src="static/js/thirdparty/bootstrap.min.js"></script>
-	<script type="text/javascript" src="static/js/app.js"></script>
+	<script type="text/javascript" src="/static/js/thirdparty/jquery-3.1.1.min.js"></script>
+	<script type="text/javascript" src="/static/js/thirdparty/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/static/js/app.js"></script>
 </body>
 </html>
